<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="32dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tvBienvenida"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAgregarPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/btnAgregarPersona"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnMostrarListaPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnMostrarLista"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnMostrarDatos"
        android:textAllCaps="false"
        android:textSize="18sp" />

</LinearLayout>